tests/reference/asr-merge_bits_comp-23a3e67.stderr
semantic error: Kind of all the arguments of Mergebits must be the same
 --> tests/errors/merge_bits_comp.f90:2:14
  |
2 |     print *, merge_bits(8, 12_8, 2)
  |              ^^^^^^^^^^^^^^^^^^^^^^ 
